Fixed footbar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ div.foot {
 }
 
 .foot-left {
-	width: calc(60% - 20px);
+	width: calc(50% - 20px);
 	float: left;
 	padding-left: 20px;
 	text-align: left;
@@ -108,11 +108,11 @@ div.foot {
 }
 
 .foot-right {
-	width: calc(40% - 20px);
+	width: calc(50% - 20px);
 	float: right;
 	padding-right: 20px;
 	text-align: right;
-	line-height: 42px;
+	line-height: 40px;
     font-size: large;
 }
 
@@ -592,6 +592,7 @@ input {
     right: 0;
     left: 0;
     bottom: 0;
+	box-shadow: none;
   }
 
   div.body {
@@ -672,6 +673,15 @@ input {
   div.rightblock {
     padding: 3px;
     flex-basis: calc(100% - 140px);
+  }
+  
+  .foot-left {
+	  display: none;
+  }
+  
+  .foot-right {
+	  width: calc(100% - 40px);
+	  text-align:center;
   }
 }
 
